# Apidoc

./: Apidoc.pptx  README.md  README_Report.md  TZ_Claude.md  TZ_DeepSeek.md
apidoc_claude/apidoc-manager/: .coverage  LICENSE  README.md  alembic.ini  app.py  openapi.json  openapi.yaml  pyproject.toml
apidoc_claude/apidoc-manager/apidoc/: __init__.py  cli.py  config.py
apidoc_claude/apidoc-manager/apidoc/api/: client.py  publishers.py  validators.py
apidoc_claude/apidoc-manager/apidoc/commands/: convert.py  diff.py  generate.py  mock.py  server.py  tree.py  validate.py
apidoc_claude/apidoc-manager/apidoc/plugins/: __init__.py
apidoc_claude/apidoc-manager/apidoc/plugins/generators/: fastapi_gen.py  flask_gen.py
apidoc_claude/apidoc-manager/apidoc/plugins/testgens/: pytest_gen.py
apidoc_claude/apidoc-manager/apidoc/utils/: errors.py  output.py  spec.py
apidoc_claude/apidoc-manager/my_tests/: conftest.py  test_api.py
apidoc_claude/apidoc-manager/server/: __init__.py  database.py  main.py  models.py  schemas.py
apidoc_claude/apidoc-manager/server/migrations/: env.py  script.py.mako
apidoc_claude/apidoc-manager/server/migrations/versions/: 0001_initial.py
apidoc_claude/apidoc-manager/server/routers/: specs.py
apidoc_claude/apidoc-manager/server/services/: spec_service.py
apidoc_claude/apidoc-manager/tests/: conftest.py
apidoc_claude/apidoc-manager/tests/e2e/: test_e2e_scenarios.py
apidoc_claude/apidoc-manager/tests/integration/: test_server_specs.py  test_service_layer.py
apidoc_claude/apidoc-manager/tests/integration/cli/: test_cli_server.py
apidoc_claude/apidoc-manager/tests/unit/: test_commands_helpers.py  test_utils.py
apidoc_claude/apidoc-manager/tests/unit/api/: test_client.py  test_publishers.py  test_publishers_extended.py  test_validators.py
apidoc_claude/apidoc-manager/tests/unit/commands/: test_convert.py  test_diff.py  test_generate.py  test_generate_wizard.py  test_testgen.py  test_validate.py
apidoc_deepseek/apidoc-manager/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  create_project.py  demo_spec.yaml  fix_commands.py  fix_final.py  fix_production.py  nginx.conf  prometheus.yml  pyproject.toml  requirements.txt  smoke_test.py  test_conv.json  test_conv.yaml
apidoc_deepseek/apidoc-manager/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  create_project.py
apidoc_deepseek/apidoc-manager/.github/workflows/: ci.yml  release.yml  security-scan.yml
apidoc_deepseek/apidoc-manager/apidoc_cli/: __init__.py  config.py  exceptions.py  main.py  utils.py  validators.py
apidoc_deepseek/apidoc-manager/apidoc_cli/commands/: __init__.py  convert.py  diff.py  generate.py  mock.py  publish.py  server.py  testgen.py  tree.py  validate.py
apidoc_deepseek/apidoc-manager/apidoc_cli/plugins/: __init__.py  base.py  go_parser.py  java_parser.py  jest_generator.py  js_parser.py  pytest_generator.py  python_parser.py
apidoc_deepseek/apidoc-manager/apidoc_cli/plugins/publishers/: __init__.py  github.py  readme.py  redocly.py  swaggerhub.py
apidoc_deepseek/apidoc-manager/apidoc_cli/templates/: openapi_base.yaml  test_template.py.j2
apidoc_deepseek/apidoc-manager/apidoc_server/: __init__.py  alembic.ini  config.py  database.py  logging_config.py  main.py  metrics.py  models.py  schemas.py  security.py
apidoc_deepseek/apidoc-manager/apidoc_server/alembic/: env.py
apidoc_deepseek/apidoc-manager/apidoc_server/alembic/versions/: 001_initial.py  002_add_metadata.py  003_add_indexes.py
apidoc_deepseek/apidoc-manager/apidoc_server/api/: __init__.py  auth.py  diff.py  import_export.py  search.py  specs.py  versions.py
apidoc_deepseek/apidoc-manager/apidoc_server/middleware/: __init__.py  cors.py  csrf.py  rate_limit.py  request_id.py
apidoc_deepseek/apidoc-manager/apidoc_server/services/: __init__.py  diff_service.py  publish_service.py  spec_service.py  validation_service.py  version_service.py
apidoc_deepseek/apidoc-manager/apidoc_server/static/: logo.html
apidoc_deepseek/apidoc-manager/apidoc_server/tests/: __init__.py  conftest.py  test_api.py  test_security.py  test_services.py
apidoc_deepseek/apidoc-manager/docker/: Dockerfile.cli  Dockerfile.prod  Dockerfile.server  docker-compose.prod.yml  docker-compose.yml
apidoc_deepseek/apidoc-manager/docs/: api-reference.md  cli-reference.md  index.md  installation.md  plugin-development.md  quickstart.md
apidoc_deepseek/apidoc-manager/docs/examples/: fastapi_example.py
apidoc_deepseek/apidoc-manager/generated_tests/: conftest.py  test_default.py  test_users.py
apidoc_deepseek/apidoc-manager/grafana/dashboards/: apidoc-overview.json  apidoc-performance.json
apidoc_deepseek/apidoc-manager/grafana/datasources/: prometheus.yaml
apidoc_deepseek/apidoc-manager/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secrets.yaml  service.yaml
apidoc_deepseek/apidoc-manager/k8s/monitoring/: prometheus-rule.yaml  servicemonitor.yaml
apidoc_deepseek/apidoc-manager/scripts/: build.sh  deploy.sh  gen_completion.sh  install.sh
apidoc_deepseek/apidoc-manager/tests/: conftest.py  test_cli.py  test_e2e.py  test_integration.py
apidoc_deepseek/apidoc-manager/tests/fixtures/: fastapi_app.py  openapi_invalid.yaml  openapi_valid.yaml
apidoc_deepseek/apidoc-manager/tests_out/: conftest.py
