[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apidoc-manager"
version = "0.1.0"
description = "CLI tool for OpenAPI specification management"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "APIDoc Team", email = "team@apidoc.local"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "httpx>=0.25.0",
    "openapi-core>=0.18.0",
    "openapi-spec-validator>=0.6.0",
    "prance>=23.0.0",
    "pyyaml>=6.0",
    "jsonschema>=4.19.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "keyring>=24.0.0",
    "python-json-logger>=2.0.0",
    "faker>=19.0.0",
    "pluggy>=1.3.0",
    "importlib-metadata>=6.8.0",
    "deepdiff>=6.7.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0",
    "prometheus-client>=0.19.0",
    "slowapi>=0.1.9",
	"aiosqlite>=0.20.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
]

[project.scripts]
apidoc = "apidoc_cli.main:app"

[project.entry-points."apidoc.plugins"]
"python-parser" = "apidoc_cli.plugins.python_parser:PythonParserPlugin"
"js-parser" = "apidoc_cli.plugins.js_parser:JSParserPlugin"
"java-parser" = "apidoc_cli.plugins.java_parser:JavaParserPlugin"
"go-parser" = "apidoc_cli.plugins.go_parser:GoParserPlugin"
"pytest-generator" = "apidoc_cli.plugins.pytest_generator:PytestGeneratorPlugin"
"jest-generator" = "apidoc_cli.plugins.jest_generator:JestGeneratorPlugin"
"swaggerhub-publisher" = "apidoc_cli.plugins.publishers.swaggerhub:SwaggerHubPublisher"
"github-publisher" = "apidoc_cli.plugins.publishers.github:GitHubPublisher"
"readme-publisher" = "apidoc_cli.plugins.publishers.readme:ReadMePublisher"
"redocly-publisher" = "apidoc_cli.plugins.publishers.redocly:RedoclyPublisher"

[tool.setuptools]
packages = ["apidoc_cli", "apidoc_server"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]
